Styles et images

--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://images.ctfassets.net/v3n26e09qg2r/26j47Vd0WTJqkZHp15sMpL/405c2a2e7cc8d7f1b2beda96c729b20e/Sleep_-_Category_Image_-_Zzz.png?fm=webp&w=3840&q=75" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez notre salle de repos luxueuse pour une expérience de détente inégalée" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <title>Tranquillité - Salle de Repos & Détente</title>
+    <title>Calysta - Salle de Repos & Détente</title>
   </head>
   <body>
     <div id="root"></div>
