reste des styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://images.ctfassets.net/v3n26e09qg2r/26j47Vd0WTJqkZHp15sMpL/405c2a2e7cc8d7f1b2beda96c729b20e/Sleep_-_Category_Image_-_Zzz.png?fm=webp&w=3840&q=75" />
+    <link rel="icon" type="image/svg+xml" href="https://media.discordapp.net/attachments/1349318625294553088/1372136969647296552/Logo_Calysta-09.png?ex=6825ada2&is=68245c22&hm=e310b0e6a49bed9de352b7574de9f4a350a6063264d905dd5d4811844061f109&=&format=webp&quality=lossless&width=816&height=405" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Découvrez notre salle de repos luxueuse pour une expérience de détente inégalée" />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
